Feat: apply cosmetics recursively in case a new one has appeared after applying others