@@ -6,6 +6,7 @@ import static org.mockito.Mockito.*;
 import es.bvalero.replacer.checkwikipedia.CheckWikipediaService;
 import es.bvalero.replacer.finder.Cosmetic;
 import es.bvalero.replacer.finder.FinderPage;
+import java.util.Collections;
 import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,7 +29,9 @@ class ApplyCosmeticsServiceTest {
     @Test
     void testApplyCosmeticChanges() {
         Cosmetic cosmetic = Cosmetic.builder().start(2).text("[[Link|link]]").fix("[[link]]").build();
-        when(cosmeticFindService.findCosmetics(any(FinderPage.class))).thenReturn(Set.of(cosmetic));
+        when(cosmeticFindService.findCosmetics(any(FinderPage.class)))
+            .thenReturn(Set.of(cosmetic))
+            .thenReturn(Collections.emptySet());
 
         String text = "A [[Link|link]] to simplify.";
         String expected = "A [[link]] to simplify.";
@@ -52,9 +55,9 @@ class ApplyCosmeticsServiceTest {
         Cosmetic cosmetic = Cosmetic.builder().start(2).text("[[Link|link]]").fix("[[link]]").build();
         Cosmetic cosmetic2 = Cosmetic.builder().start(29).text("archivo").fix("Archivo").build();
         Cosmetic cosmetic3 = Cosmetic.builder().start(19).text("</br>").fix("<br>").build();
-        when(cosmeticFindService.findCosmetics(any(FinderPage.class))).thenReturn(
-            Set.of(cosmetic, cosmetic2, cosmetic3)
-        );
+        when(cosmeticFindService.findCosmetics(any(FinderPage.class)))
+            .thenReturn(Set.of(cosmetic, cosmetic2, cosmetic3))
+            .thenReturn(Collections.emptySet());
 
         String text = "A [[Link|link]] to </br> a [[archivo:x.jpeg]].";
         String expected = "A [[link]] to <br> a [[Archivo:x.jpeg]].";
@@ -67,5 +70,22 @@ class ApplyCosmeticsServiceTest {
             page.getTitle(),
             cosmetic.getCheckWikipediaAction()
         );
+    }
+
+    @Test
+    void testApplyNestedCosmeticChanges() {
+        Cosmetic cosmetic = Cosmetic.builder().start(2).text("[[Link|''link'']]").fix("''[[Link|link]]''").build();
+        Cosmetic cosmetic2 = Cosmetic.builder().start(4).text("[[Link|link]]").fix("[[link]]").build();
+        when(cosmeticFindService.findCosmetics(any(FinderPage.class)))
+            .thenReturn(Set.of(cosmetic))
+            .thenReturn(Set.of(cosmetic2))
+            .thenReturn(Collections.emptySet());
+
+        String text = "A [[Link|''link'']].";
+        String expected = "A ''[[link]]''.";
+        FinderPage page = buildFinderPage(text);
+        assertEquals(expected, applyCosmeticsService.applyCosmeticChanges(page));
+
+        verify(cosmeticFindService).findCosmetics(page);
     }
 }
